--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,22 +19,29 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 16
           cache: npm
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --force
+
+      - name: Debug environment
+        run: |
+          npm -v
+          node -v
+          ls -la
+          echo "GITHUB_REPOSITORY: $GITHUB_REPOSITORY"
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
 
       - name: Build website
-        run: npm run build
+        run: CI=false npm run build
         env:
           PUBLIC_URL: /spillmarket-prototype
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+        uses: JamesIves/github-pages-deploy-action@v4.4.3
         with:
           folder: build
           branch: gh-pages
-          token: ${{ secrets.GITHUB_TOKEN }}
-          clean: true
-          force: true
+          clean-exclude: .nojekyll
+          token: ${{ github.token }}
